<resources>
    <string name="app_name">Мой вес в Тейвате</string>
    <string name="label_name">Мой вес в Тейвате</string>
    <string name="label_result">Результат: </string>
    <string name="textedit_name">Свой вес в КГ</string>
    <string name="button_name">Посчитать</string>
    <string name="buttonAbout_name">О программе</string>
    <string name="textAbout">Как работает программа?
        Возьмем деда и посчитаем его рост. Он, примерно, составляет 185.4 см.

        Теперь высчитаем g(Ускорение свободного падения) Тейвата. Возьмем стену перед штабом Ордо Фавониус в Монде. Её высота равна 3.95 штук деда.
        Зная это, умножаем 3.95 на 185.4 и получаем размер стены 732,33 см = 7,323 м.
        Теперь посчитаем время падения деда со стены. При записи в 60fps, время падения равно 49 кадрам. Делим 49 на 60 и получаем 0,816 секунд.
        Теперь высчитываем g по формуле: g = 2h/t^2 = (2*7.323)/0.816^2=14.646/0.666 = 21.99 м/с^2

        Теперь посчитаем наш вес в тейвате.
        Возьмем наш вес на Земле и умножим на g и получим наш вес в Ньютонах.
        Переведем теперь в килограммы. 1Н = 0.1019716213 кг. Для этого, наш вес в Ньютонах умножим на 0.1019716213 и получим наш вес в Килограммах.</string>
</resources>