<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="385dp"
        android:layout_height="50dp"
        android:text="@string/label_name"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="185dp"
        android:layout_height="68dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/textedit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnGetWeight"
        android:layout_width="151dp"
        android:layout_height="67dp"
        android:layout_marginTop="64dp"
        android:text="@string/button_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toEndOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="187dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:text="@string/buttonAbout_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewKg"
        android:layout_width="329dp"
        android:layout_height="98dp"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:text="@string/label_result" />

</androidx.constraintlayout.widget.ConstraintLayout>